infrastructure/kubernetes/mesh/istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls
  namespace: stack4things
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-istio-dr
  namespace: stack4things
spec:
  host: "*.stack4things.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
